Updating search functionality to be fixed